downgrade version to java17